created get all usernames
